# cats_app

./: .gitignore
cats/: .gitignore  Dockerfile  breeds.json  cat.json  docker_compose.yaml  pyproject.toml  readme.md  requirements.txt
cats/authentication/: models.py  serializers.py  urls.py  views.py
cats/authentication/migrations/: 0001_initial.py  0002_alter_user_options.py
cats/cats/: settings.py  urls.py
cats/cats_show/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cats/cats_show/migrations/: 0001_initial.py  0002_alter_breed_options_alter_cat_options.py  0003_cat_photo_alter_cat_breed.py  0004_alter_cat_photo.py  0005_alter_cat_photo.py  0006_alter_cat_photo.py  0007_cat_gender.py  0008_alter_cat_color_alter_cat_gender.py  0009_rename_user_cat_owner.py  0010_cat_rating.py  0011_alter_cat_rating.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/shopapp/: models.py  urls.py  views.py
mysite/shopapp/management/commands/: create_products.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py
mysite/shopapp/templates/shopapp/: base.html  group_list.html  product_list.html  shop-index.html
